apps/woodpecker/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: woodpecker
  namespace: woodpecker
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`woodpecker.local.cvsickle.com`)
      kind: Rule
      services:
        - name: woodpecker-server
          port: 8000
          sticky:
            cookie:
              name: woodpecker_affinity
              httpOnly: true
              secure: true
    - match: Host(`woodpecker.cvsickle.com`)
      kind: Rule
      services:
        - name: woodpecker-server
          port: 8000
          sticky:
            cookie:
              name: woodpecker_affinity_external
              httpOnly: true
              secure: true
